# physics-utilities

./: .gitmodules  CMakeLists.txt  NOTES.md
.cache/clangd/index/: main.cpp.4F7F40A2FADFA510.idx
include/: mesh.hpp  shader.hpp
include/common/: logger.hpp
include/graphics/: mesh.hpp  shapes.hpp
include/math/: constants.hpp  rotor.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
include/physics/: gravity.hpp
scripts/: clean.sh  prep.sh
src/: main.cpp
src/graphics/: mesh.cpp
src/math/: vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
src/physics/: gravity.cpp
test/: gravity.cpp
